# python-project-lvl3

./: .gitignore  README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: pytest.yml
page_loader/: __inint__.py  __init__.py  errors.py  launch_script.py  loader.py  naming.py  page.py  uploader.py
page_loader/scripts/: upload_page.py
tests/: conftest.py  test_exceptions.py  test_loader.py  test_naming.py  test_page.py  test_script.py  test_uploader.py
tests/fixtures/: naming_data.py  test_data.py
tests/fixtures/html/: docs-python-org-3-library-venv-html-venv-def.html  test.html
tests/fixtures/test_css_subfile/: test-css.html  test_css.html
tests/fixtures/test_png_subfile/: test-png.html  test_png.html
tests/fixtures/test_wrong_subfile/: test-wrong.html  test_wrong.html
